Add new branch my-new-branch

--- a/first.html
+++ b/first.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>Add new branch my-new-branch</h3>
     <P>Git is the most popular version control system</P>
 </body>
 </html>
